---
source: server/tests/book.rs
expression: read_snapshot(&log_dir)
---
BookCreatePayload {
    title: "Cinderella",
    access_token: "admin_access_token",
}
BookPublicListPayload {
    query: None,
}
BookPublicListPayload {
    query: Some(
        "Cinderella",
    ),
}
BookPublicListPayload {
    query: Some(
        "DOES_NOT_EXIST",
    ),
}
